--- a/archives/toutiao-search/2024-02-04.md
+++ b/archives/toutiao-search/2024-02-04.md
@@ -1,68 +1,82 @@
 # 2024-02-04
 
-共 370 条
+共 382 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 04 2024 22:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 04 2024 23:00:36 GMT+0800 (China Standard Time) -->
 1. [暴雪天气下高速交警为车辆压速开道](https://so.toutiao.com/search?keyword=暴雪天气下高速交警为车辆压速开道)
 1. [网友向路政求助：堵路上两天一夜了](https://so.toutiao.com/search?keyword=网友向路政求助：堵路上两天一夜了)
 1. [交通运输部门全力保障春运平安顺畅](https://so.toutiao.com/search?keyword=交通运输部门全力保障春运平安顺畅)
 1. [头孢真的不能配酒](https://so.toutiao.com/search?keyword=头孢真的不能配酒)
 1. [暴雪致高速瘫痪车主被困十余小时](https://so.toutiao.com/search?keyword=暴雪致高速瘫痪车主被困十余小时)
-1. [证监会党委会议：防范市场异常波动](https://so.toutiao.com/search?keyword=证监会党委会议：防范市场异常波动)
-1. [南方女孩被东北标语吓到](https://so.toutiao.com/search?keyword=南方女孩被东北标语吓到)
-1. [2024吉林卫视春节联欢晚会](https://so.toutiao.com/search?keyword=2024吉林卫视春节联欢晚会)
+1. [湖北女子看到高铁缓慢行驶惊呆了](https://so.toutiao.com/search?keyword=湖北女子看到高铁缓慢行驶惊呆了)
+1. [男子高速询问食物价格被村民感动](https://so.toutiao.com/search?keyword=男子高速询问食物价格被村民感动)
+1. [多地大雪致高速堵车村民暖心送物资](https://so.toutiao.com/search?keyword=多地大雪致高速堵车村民暖心送物资)
 1. [这些涉无偿献血信息不实](https://so.toutiao.com/search?keyword=这些涉无偿献血信息不实)
 1. [浦东机场新增多处网约车上车点标识](https://so.toutiao.com/search?keyword=浦东机场新增多处网约车上车点标识)
-1. [多地大雪致高速堵车村民暖心送物资](https://so.toutiao.com/search?keyword=多地大雪致高速堵车村民暖心送物资)
-1. [证监会：坚决防范市场异常波动](https://so.toutiao.com/search?keyword=证监会：坚决防范市场异常波动)
-1. [福建德化高速路段车辆相撞起火](https://so.toutiao.com/search?keyword=福建德化高速路段车辆相撞起火)
-1. [武汉：列车停运别贸然前往火车站](https://so.toutiao.com/search?keyword=武汉：列车停运别贸然前往火车站)
-1. [女子因彩礼和相恋8年男友分手](https://so.toutiao.com/search?keyword=女子因彩礼和相恋8年男友分手)
-1. [56岁TVB男演员郑启泰去世](https://so.toutiao.com/search?keyword=56岁TVB男演员郑启泰去世)
-1. [专家：调休假装上班 不如真实放假](https://so.toutiao.com/search?keyword=专家：调休假装上班+不如真实放假)
-1. [湖北女子看到高铁缓慢行驶惊呆了](https://so.toutiao.com/search?keyword=湖北女子看到高铁缓慢行驶惊呆了)
+1. [女子离婚冷静期间被丈夫持刀杀害](https://so.toutiao.com/search?keyword=女子离婚冷静期间被丈夫持刀杀害)
+1. [杨波道歉](https://so.toutiao.com/search?keyword=杨波道歉)
 1. [上海恢复浦东机场网约车服务](https://so.toutiao.com/search?keyword=上海恢复浦东机场网约车服务)
+1. [暴雪后农民划破大棚抢救草莓](https://so.toutiao.com/search?keyword=暴雪后农民划破大棚抢救草莓)
+1. [蔡磊称捐1个亿因为他只有1个亿](https://so.toutiao.com/search?keyword=蔡磊称捐1个亿因为他只有1个亿)
+1. [证监会：坚决防范市场异常波动](https://so.toutiao.com/search?keyword=证监会：坚决防范市场异常波动)
+1. [立春要躲藏 不能床上躺](https://so.toutiao.com/search?keyword=立春要躲藏+不能床上躺)
+1. [女子因彩礼和相恋8年男友分手](https://so.toutiao.com/search?keyword=女子因彩礼和相恋8年男友分手)
+1. [安徽阜阳：暴雪天种植户忍痛割大棚](https://so.toutiao.com/search?keyword=安徽阜阳：暴雪天种植户忍痛割大棚)
 1. [夫妻打拼15年 搓澡“搓出”3套房](https://so.toutiao.com/search?keyword=夫妻打拼15年+搓澡“搓出”3套房)
-1. [邓紫棋等人现身梅西中国行比赛现场](https://so.toutiao.com/search?keyword=邓紫棋等人现身梅西中国行比赛现场)
-1. [杨波朋友圈回应轻生](https://so.toutiao.com/search?keyword=杨波朋友圈回应轻生)
+1. [张家界七十二奇楼发生坍塌 1人重伤](https://so.toutiao.com/search?keyword=张家界七十二奇楼发生坍塌+1人重伤)
+1. [南方女孩被东北标语吓到](https://so.toutiao.com/search?keyword=南方女孩被东北标语吓到)
+1. [白头发可能是身体给你的警报](https://so.toutiao.com/search?keyword=白头发可能是身体给你的警报)
+1. [56岁TVB男演员郑启泰去世](https://so.toutiao.com/search?keyword=56岁TVB男演员郑启泰去世)
 1. [福建高速半挂车追尾致7死](https://so.toutiao.com/search?keyword=福建高速半挂车追尾致7死)
+1. [专家：调休假装上班 不如真实放假](https://so.toutiao.com/search?keyword=专家：调休假装上班+不如真实放假)
+1. [武汉：列车停运别贸然前往火车站](https://so.toutiao.com/search?keyword=武汉：列车停运别贸然前往火车站)
+1. [美民主党举行首场初选](https://so.toutiao.com/search?keyword=美民主党举行首场初选)
+1. [贾静雯一家五口日本游玩](https://so.toutiao.com/search?keyword=贾静雯一家五口日本游玩)
+1. [杨波朋友圈回应轻生](https://so.toutiao.com/search?keyword=杨波朋友圈回应轻生)
+1. [证监会党委会议：防范市场异常波动](https://so.toutiao.com/search?keyword=证监会党委会议：防范市场异常波动)
+1. [暴雪冰冻大雾大风四预警齐发](https://so.toutiao.com/search?keyword=暴雪冰冻大雾大风四预警齐发)
+1. [王猛：60分的库里都救不活这支勇士](https://so.toutiao.com/search?keyword=王猛：60分的库里都救不活这支勇士)
+1. [华为重夺中国手机市场销量第一宝座](https://so.toutiao.com/search?keyword=华为重夺中国手机市场销量第一宝座)
+1. [以色列爆发全国性抗议要求总理下台](https://so.toutiao.com/search?keyword=以色列爆发全国性抗议要求总理下台)
+1. [仙剑三主演都现身央视春晚彩排](https://so.toutiao.com/search?keyword=仙剑三主演都现身央视春晚彩排)
+1. [应对特殊天气 武汉骑手超时免罚](https://so.toutiao.com/search?keyword=应对特殊天气+武汉骑手超时免罚)
+1. [经济日报：年夜饭套餐莫成套路](https://so.toutiao.com/search?keyword=经济日报：年夜饭套餐莫成套路)
+1. [武大性骚扰涉事男方母亲：系隔裤挠痒](https://so.toutiao.com/search?keyword=武大性骚扰涉事男方母亲：系隔裤挠痒)
+1. [导演宁浩评王家卫《繁花》](https://so.toutiao.com/search?keyword=导演宁浩评王家卫《繁花》)
+1. [被《欢乐家长群》手工作业卷到](https://so.toutiao.com/search?keyword=被《欢乐家长群》手工作业卷到)
+1. [湖北省长：打好雨雪冰冻攻坚战](https://so.toutiao.com/search?keyword=湖北省长：打好雨雪冰冻攻坚战)
+1. [高价喝水是不是智商税](https://so.toutiao.com/search?keyword=高价喝水是不是智商税)
+1. [美国加州州长亲眼目睹“零元购”](https://so.toutiao.com/search?keyword=美国加州州长亲眼目睹“零元购”)
+1. [湖北宜都：寒夜破冰除雪忙](https://so.toutiao.com/search?keyword=湖北宜都：寒夜破冰除雪忙)
+1. [张国立卸任浙江常升影视公司职务](https://so.toutiao.com/search?keyword=张国立卸任浙江常升影视公司职务)
+1. [2024年中央一号文件发布](https://so.toutiao.com/search?keyword=2024年中央一号文件发布)
+1. [为什么现在的猪肉鱼肉不好吃了](https://so.toutiao.com/search?keyword=为什么现在的猪肉鱼肉不好吃了)
+1. [高速多车相撞 现场有人大喊救人](https://so.toutiao.com/search?keyword=高速多车相撞+现场有人大喊救人)
+1. [高力士演员李如平去世](https://so.toutiao.com/search?keyword=高力士演员李如平去世)
+1. [2024吉林卫视春节联欢晚会](https://so.toutiao.com/search?keyword=2024吉林卫视春节联欢晚会)
+1. [福建德化高速路段车辆相撞起火](https://so.toutiao.com/search?keyword=福建德化高速路段车辆相撞起火)
+1. [邓紫棋等人现身梅西中国行比赛现场](https://so.toutiao.com/search?keyword=邓紫棋等人现身梅西中国行比赛现场)
 1. [媒体：多地再现免费送房](https://so.toutiao.com/search?keyword=媒体：多地再现免费送房)
 1. [央行明日降准0.5个百分点](https://so.toutiao.com/search?keyword=央行明日降准0.5个百分点)
-1. [杨波道歉](https://so.toutiao.com/search?keyword=杨波道歉)
 1. [襄阳收费站为被困车主送热水肉丝面](https://so.toutiao.com/search?keyword=襄阳收费站为被困车主送热水肉丝面)
-1. [仙剑三主演都现身央视春晚彩排](https://so.toutiao.com/search?keyword=仙剑三主演都现身央视春晚彩排)
-1. [导演宁浩评王家卫《繁花》](https://so.toutiao.com/search?keyword=导演宁浩评王家卫《繁花》)
 1. [靠谱的国产年货有哪些](https://so.toutiao.com/search?keyword=靠谱的国产年货有哪些)
-1. [立春要躲藏 不能床上躺](https://so.toutiao.com/search?keyword=立春要躲藏+不能床上躺)
-1. [张家界七十二奇楼发生坍塌 1人重伤](https://so.toutiao.com/search?keyword=张家界七十二奇楼发生坍塌+1人重伤)
 1. [媒体：美国的中东政策加剧地区危局](https://so.toutiao.com/search?keyword=媒体：美国的中东政策加剧地区危局)
-1. [贾静雯一家五口日本游玩](https://so.toutiao.com/search?keyword=贾静雯一家五口日本游玩)
-1. [2024年中央一号文件发布](https://so.toutiao.com/search?keyword=2024年中央一号文件发布)
-1. [华为重夺中国手机市场销量第一宝座](https://so.toutiao.com/search?keyword=华为重夺中国手机市场销量第一宝座)
 1. [《要久久爱》蓝亦菲去世真相好虐心](https://so.toutiao.com/search?keyword=《要久久爱》蓝亦菲去世真相好虐心)
 1. [郑启泰去世前两天刚宣布结婚](https://so.toutiao.com/search?keyword=郑启泰去世前两天刚宣布结婚)
-1. [暴雪后农民划破大棚抢救草莓](https://so.toutiao.com/search?keyword=暴雪后农民划破大棚抢救草莓)
-1. [武大性骚扰涉事男方母亲：系隔裤挠痒](https://so.toutiao.com/search?keyword=武大性骚扰涉事男方母亲：系隔裤挠痒)
 1. [美国驻华大使晒图去了冰雪大世界](https://so.toutiao.com/search?keyword=美国驻华大使晒图去了冰雪大世界)
-1. [安徽阜阳：暴雪天种植户忍痛割大棚](https://so.toutiao.com/search?keyword=安徽阜阳：暴雪天种植户忍痛割大棚)
-1. [女子离婚冷静期间被丈夫持刀杀害](https://so.toutiao.com/search?keyword=女子离婚冷静期间被丈夫持刀杀害)
-1. [白头发可能是身体给你的警报](https://so.toutiao.com/search?keyword=白头发可能是身体给你的警报)
 1. [远嫁女子回娘家 被开玩笑瞬间流泪](https://so.toutiao.com/search?keyword=远嫁女子回娘家+被开玩笑瞬间流泪)
 1. [杨波出轨当事人女主称已经报警](https://so.toutiao.com/search?keyword=杨波出轨当事人女主称已经报警)
 1. [《摇太阳》彭昱畅李庚希救赎文学](https://so.toutiao.com/search?keyword=《摇太阳》彭昱畅李庚希救赎文学)
 1. [女子院内铲雪被屋顶滑落的积雪压倒](https://so.toutiao.com/search?keyword=女子院内铲雪被屋顶滑落的积雪压倒)
-1. [高价喝水是不是智商税](https://so.toutiao.com/search?keyword=高价喝水是不是智商税)
 1. [《我们一起摇太阳》发布宣传曲MV](https://so.toutiao.com/search?keyword=《我们一起摇太阳》发布宣传曲MV)
 1. [下雪天高速封路司机们捡柴生火](https://so.toutiao.com/search?keyword=下雪天高速封路司机们捡柴生火)
 1. [河南高速通宵除雪边下边清](https://so.toutiao.com/search?keyword=河南高速通宵除雪边下边清)
 1. [男孩过斑马线时对着车辆跳科目三](https://so.toutiao.com/search?keyword=男孩过斑马线时对着车辆跳科目三)
 1. [多地中小学教师被要求寒假值班](https://so.toutiao.com/search?keyword=多地中小学教师被要求寒假值班)
-1. [以色列爆发全国性抗议要求总理下台](https://so.toutiao.com/search?keyword=以色列爆发全国性抗议要求总理下台)
 1. [年货采购进入最高峰](https://so.toutiao.com/search?keyword=年货采购进入最高峰)
 1. [国道319线武隆段发生山体垮塌](https://so.toutiao.com/search?keyword=国道319线武隆段发生山体垮塌)
 1. [韩网评张佳宁穿朝鲜族服饰](https://so.toutiao.com/search?keyword=韩网评张佳宁穿朝鲜族服饰)
-1. [美国加州州长亲眼目睹“零元购”](https://so.toutiao.com/search?keyword=美国加州州长亲眼目睹“零元购”)
 1. [白鹿像极了上班要迟到的我](https://so.toutiao.com/search?keyword=白鹿像极了上班要迟到的我)
 1. [中央一号文件：“千万工程”是重点](https://so.toutiao.com/search?keyword=中央一号文件：“千万工程”是重点)
 1. [金价走高推动黄金消费升温](https://so.toutiao.com/search?keyword=金价走高推动黄金消费升温)
@@ -78,7 +92,6 @@
 1. [官方辟谣凉山州又起山火](https://so.toutiao.com/search?keyword=官方辟谣凉山州又起山火)
 1. [武汉大雪压断树枝致多辆轿车被砸](https://so.toutiao.com/search?keyword=武汉大雪压断树枝致多辆轿车被砸)
 1. [《晴雅集》遭起诉索赔2400万](https://so.toutiao.com/search?keyword=《晴雅集》遭起诉索赔2400万)
-1. [高力士演员李如平去世](https://so.toutiao.com/search?keyword=高力士演员李如平去世)
 1. [河南“车坚强”成功回家过年](https://so.toutiao.com/search?keyword=河南“车坚强”成功回家过年)
 1. [让农民种粮有钱挣能得利](https://so.toutiao.com/search?keyword=让农民种粮有钱挣能得利)
 1. [哈马斯领导人与土耳其情报主管会晤](https://so.toutiao.com/search?keyword=哈马斯领导人与土耳其情报主管会晤)
@@ -112,7 +125,6 @@
 1. [女子担心高速堵车带一锅焖饭](https://so.toutiao.com/search?keyword=女子担心高速堵车带一锅焖饭)
 1. [官方：把农民的各项补助补贴补到位](https://so.toutiao.com/search?keyword=官方：把农民的各项补助补贴补到位)
 1. [科尔谈收官阶段阵容](https://so.toutiao.com/search?keyword=科尔谈收官阶段阵容)
-1. [为什么现在的猪肉鱼肉不好吃了](https://so.toutiao.com/search?keyword=为什么现在的猪肉鱼肉不好吃了)
 1. [奇瑞称被砸车主实付4100换引擎盖](https://so.toutiao.com/search?keyword=奇瑞称被砸车主实付4100换引擎盖)
 1. [黄心颖重提出轨许志安事件](https://so.toutiao.com/search?keyword=黄心颖重提出轨许志安事件)
 1. [福建舰最新画面中舰尾停的是什么](https://so.toutiao.com/search?keyword=福建舰最新画面中舰尾停的是什么)
